[metadata]
name = yourcheatsheet 
version = 0.0.1
description = CLI tool to convert your Markdown documentation into cheat sheets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/claybex/YourCheatSheet
author = Max
author_email = "Max" <max@kube.gg>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    markdown-it-py==3.0.0

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    ycs = YourCheatSheet.cli:main